src/sentry/static/sentry/less/shared-components.less
/* ... */
/**
* Repository label
* ============================================================================
*/

.repo-label {
  .label;
  display: inline-block;
  vertical-align: text-bottom;
  padding: 5px 8px;
  line-height: 1;
  background: @40;
}

/**
* Circle indicators
* ============================================================================
*/

.circle-indicator {
  display: inline-block;
  .square(14px);
  border-radius: 14px;
  margin-right: 8px;
  position: relative;
  top: 1px;

  &.enabled {
    background: @green;
  }

  &.disabled {
    background: @red;
  }
}

/**
* Project nav
* ============================================================================
*/

ul.radio-inputs {
  .list-unstyled;
  position: relative;
  display: inline-block;
  margin-bottom: 10px;

  li.radio {
    margin-top: 0;
    margin-right: 10px;
    margin-bottom: 10px;
    margin-left: 0;
    display: block;
    font-weight: normal;

    label {
      padding-left: 25px;

      input {
        margin-left: -25px;
        margin-top: 4px;
        vertical-align: middle;
      }

      .help-block {
        margin-bottom: 0;
      }
    }
  }
}

/**
* Modal
* ============================================================================
*/

.modal-open .app {
  -webkit-filter: ~'blur(3px) grayscale(25%)';
}

.modal-backdrop {
  background-color: @gray-dark;
}

.modal-container {
  position: relative;
}
.modal-container .modal,
.modal-container .modal-backdrop {
  position: absolute;
}

.modal {
  .close {
    background: none;
    border: 0;
    padding: 0;
    font-size: 24px;
    position: absolute;
    top: 14px;
    right: 15px;
    z-index: 100;
    color: lighten(@gray, 20);
    .transition(color 0.1s linear);

    &:hover {
      color: @gray;
    }
  }
  .modal-content {
    padding: 30px;
    box-shadow: 0 15px 40px 0 rgba(67, 62, 75, 0.3), 0 1px 15px 0 rgba(67, 61, 74, 0.15);
    border-radius: 7px;
    border: 0;
    overflow: hidden;
  }

  .modal-header {
    background: rgba(249, 250, 251, 0.8);
    border-bottom: 1px solid @trim;
    border-radius: 7px 7px 0 0;
    padding: 20px 30px;
    margin: -30px -30px 20px;

    h1,
    h2,
    h3,
    h4,
    h5,
    h6 {
      font-size: 20px;
      font-weight: 600;
      margin-bottom: 0;
      line-height: 1.1;
    }

    .close {
      margin-top: 1px;
    }
  }

  .modal-body {
    padding: 0;
    font-size: 15px;

    p:last-child {
      margin-bottom: 0;
    }

    .alert {
      border-radius: @border-radius-base;
    }

    img {
      max-width: 100%;
      border-radius: 3px;
      border: 1px solid @trim;
      box-shadow: 0 1px 1px rgba(0, 0, 0, 0.08);
    }

    .form-actions {
      margin-bottom: 0;
    }
  }

  .modal-footer {
    padding: 20px 30px;
    border-top: 1px solid @trim;
    margin: 20px -30px -30px;
  }

  .nav-stacked {
    margin-bottom: 0;

    li {
      a {
        .transition(none);
        &:hover {
          color: #fff;
          background: @purple;
        }
      }
    }
  }
}

// Sudo Modal
.sudo-modal.modal {
  .modal-header {
    padding: 12px 30px;

    .close {
      margin-top: 0;
      top: 12px;
    }
  }

  .form-actions {
    margin-left: -30px;
    margin-right: -30px;
    margin-bottom: -30px;
    padding-right: 30px;
    padding-bottom: 20px;
    padding-top: 20px;
  }
}

// Command Palette
.command-palette.modal {
  .modal-content {
    padding: 0;
    overflow: visible;
  }
}

.create-ownership-rule-modal {
  @media (min-width: 767px) {
    .modal-dialog {
      width: 80%;
      margin-left: -40%;
    }
  }
  .modal-content {
    overflow: initial;
  }
}

// Broadcast Modal

.modal-broadcast {
  .modal-dialog {
    position: absolute;
    right: 10px;
    bottom: 10px;
    .release-buttons {
      display: flex;
      justify-content: flex-end;
      .btn {
        margin-left: 10px;
      }
    }
    .close-icon {
      color: @50;
      cursor: pointer;

      &:hover {
        color: @80;
      }
    }
    .modal {
      z-index: 2000;
      .transition(transform 0.2s ease);

      &.a-nth {
        transform: scale(1, 1) translate(0, 0px);
        z-index: 2000;
        opacity: 1;
      }

      &.b-nth {
        transform: scale(0.95, 0.95) translate(0, -50px);
        z-index: 1999;
        // opacity: .8;
      }

      &.c-nth {
        transform: scale(0.9, 0.9) translate(0, -100px);
        z-index: 1998;
        // opacity: .6;
      }

      &.d-nth {
        transform: scale(0.85, 0.85) translate(0, -150px);
        z-index: 1997;
        // opacity: .4;
      }
    }
  }
}

/**
* Well
* ============================================================================
*/

.well {
  border: 1px solid @trim;
  box-shadow: none;
  background: @white-dark;
  padding: 15px 20px;
  margin-bottom: 20px;
  border-radius: 3px;

  p {
    &:last-child {
      margin-bottom: 0;
    }
  }

  &.important {
    background: @yellow;
    border: 0;
    a,
    a:active {
      color: @gray-dark;
    }
  }

  &.image-well {
    padding: 80px 30px;
  }
}

.blankslate {
  text-align: center;
  padding: 50px 0;

  .icon {
    font-size: 72px;
    color: @40;
    margin-bottom: 10px;
  }

  h5 {
    margin-bottom: 10px;
  }
}

/**
* Tag List
* ============================================================================
*/

ul.tag-list {
  list-style: none;
  padding-left: 0;
  margin-bottom: 15px;

  li {
    margin-bottom: 5px;
    position: relative;

    .progressbar {
      padding: 5px 0;
    }

    &:nth-child(even) {
      background: #f9f9f9;
    }

    span {
      position: absolute;
      right: 10px;
    }
  }
}
/* ... */

